.provarCaches/00D5f000005vwGkEAI/objects/rstk__poapprvlrev__c.object
<CustomObject>
    <description>poapprvlrev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv1comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 1 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv1dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approval 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv1usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv1yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 1 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv2comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 2 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv2dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approval 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv2usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv2yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 2 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv3comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 3 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv3dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approval 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv3usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprv3yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver 3 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprvid1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver ID 1</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprvid2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver ID 2</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_agrapprvid3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approver ID 3</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_amtapprv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount Approved</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_amtunapprv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount Yet To Be Approved</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoapprvlrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv1comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 1 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv1dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approval 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv1usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 1</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv1yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 1 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv2comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 2 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv2dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approval 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv2usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 2</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv2yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 2 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv3comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 3 Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv3dte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approval 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv3usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 3</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprv3yn__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver 3 - Approved Y/N</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprvid1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver ID 1</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprvid2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver ID 2</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_lvl1apprvid3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level 1 Approver ID 3</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipName>POAPPRVLREVs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_ordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POAPPRVLREVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_poapprvlimit__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Approval Limit</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_poapprvlimitdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Approval Limit Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_poapprvlimitusrno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Approval Limit Changed By</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POAPPRVLREVs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_rev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Revision Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_seqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>poapprvlrevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapprvlrev_updpoapprvlimit__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Updated PO Approval Limit</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Approval Revision</label>
    <listViews>
        <fullName>rstk__PO_Approval_Revision</fullName>
        <columns>NAME</columns>
        <columns>rstk__poapprvlrev_amtapprv__c</columns>
        <columns>rstk__poapprvlrev_amtunapprv__c</columns>
        <columns>rstk__poapprvlrev_agrapprv1dte__c</columns>
        <columns>rstk__poapprvlrev_agrapprv1usrno__c</columns>
        <columns>rstk__poapprvlrev_agrapprv1yn__c</columns>
        <columns>rstk__poapprvlrev_agrapprv1comments__c</columns>
        <columns>rstk__poapprvlrev_agrapprvid1__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>PO Approval Revision</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POAPPRVLREV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Approval Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>